Added vuex to web

--- a/Listen.Web/.vscode/launch.json
+++ b/Listen.Web/.vscode/launch.json
@@ -3,9 +3,9 @@
   "configurations": [
     {
       "type": "chrome",
-      "request": "launch",
-      "name": "Launch Chrome against localhost",
-      "url": "http://localhost:8080",
+      "request": "attach",
+      "name": "Attach to Chrome",
+      "port": 9222,
       "webRoot": "${workspaceRoot}"
     }
   ]
