--- a/Listen.Web/package.json
+++ b/Listen.Web/package.json
@@ -11,8 +11,11 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "auth0-js": "^8.10.1",
     "axios": "^0.16.2",
+    "jwt-decode": "^2.2.0",
     "vue": "^2.4.2",
+    "vue-authenticate": "1.2.7",
     "vue-axios": "^2.0.2",
     "vue-material": "^0.7.5",
     "vue-router": "^2.7.0",
