--- a/Listen.Api/Properties/launchSettings.json
+++ b/Listen.Api/Properties/launchSettings.json
@@ -19,11 +19,11 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DEBUG_USER": false,
-        "AUTH_REDIRECT_URI": "http://localhost:8081",
         "AUTH_AUDIENCE": "https://listen.fredriklowenhamn.se",
         "AUTH_SCOPE": "full_access",
         "AUTH_CLIENT_ID": "bnat0HG5RxUBCQaAP4ZGuN92P0j00BzI",
-        "AUTH_DOMAIN": "lowet.eu.auth0.com"
+        "AUTH_DOMAIN": "lowet.eu.auth0.com",
+        "DATABASE": "localhost" 
       },
       "applicationUrl": "http://localhost:58560/"
     }
